[gd_scene load_steps=16 format=3 uid="uid://hks8m0oh1pdw"]

[ext_resource type="PackedScene" uid="uid://bxbkpou8fdoqo" path="res://game/actors/enemies/enemy.tscn" id="1_pulls"]
[ext_resource type="PackedScene" uid="uid://dg5v3158sj5e3" path="res://game/actors/enemies/shield_enemy/sk_shield_enemy.tscn" id="2_00emp"]
[ext_resource type="Script" path="res://common/components/templates/HitBoxComponent3D.gd" id="3_8ipek"]
[ext_resource type="Script" path="res://game/actors/enemies/shield_enemy/shield_enemy_controller.gd" id="3_h78be"]
[ext_resource type="Script" path="res://common/components/gravity.gd" id="4_21lja"]
[ext_resource type="Script" path="res://common/components/rotate_towards_motion.gd" id="5_bkrha"]
[ext_resource type="Script" path="res://common/components/rotate_towards_target.gd" id="6_8vusw"]
[ext_resource type="AudioStream" uid="uid://bxb6fnh2shf7r" path="res://game/actors/enemies/sfx/aud_enemy_shield_hurt_1.wav" id="8_y5lxg"]
[ext_resource type="AudioStream" uid="uid://uukes5df4pu8" path="res://game/actors/enemies/sfx/aud_enemy_shield_hurt_2.wav" id="9_q5nth"]
[ext_resource type="AudioStream" uid="uid://basmum3cshibk" path="res://game/actors/enemies/sfx/aud_enemy_shield_hurt_3.wav" id="10_xjpv7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_i3cd7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_43og7"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_5rvqd"]
radius = 20.0

[sub_resource type="SphereShape3D" id="SphereShape3D_riddk"]
radius = 0.45

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ftmsj"]
streams_count = 3
stream_0/stream = ExtResource("8_y5lxg")
stream_1/stream = ExtResource("9_q5nth")
stream_2/stream = ExtResource("10_xjpv7")

[node name="ShieldEnemy" instance=ExtResource("1_pulls")]
collision_layer = 9
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.555779, 0)
shape = SubResource("SphereShape3D_i3cd7")

[node name="sk_shield_enemy" parent="." index="4" instance=ExtResource("2_00emp")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="sk_shield_enemy/FurballRig" index="0"]
bones/0/position = Vector3(4.61575e-09, 1.31079, -0.0784599)
bones/1/rotation = Quaternion(0.961624, 0.0541778, 0.00177224, 0.268964)
bones/4/rotation = Quaternion(9.00319e-08, 0.994749, -0.102345, 7.86601e-07)
bones/7/rotation = Quaternion(0.399414, -0.00643357, -0.0578766, 0.914919)

[node name="FurballBody" parent="sk_shield_enemy/FurballRig/Skeleton3D" index="0"]
transform = Transform3D(1, -7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0, 1, 1.85185e-13, 4.64916e-06, -6.10948e-07)

[node name="sm_lowpoly_skull4" parent="sk_shield_enemy/SkullsOrbiting" index="2"]
transform = Transform3D(-0.229646, 0, -0.973274, 0, 1, 0, 0.973274, 0, -0.229646, -0.29273, 0.552841, -0.199975)

[node name="sm_lowpoly_skull5" parent="sk_shield_enemy/SkullsOrbiting" index="3"]
transform = Transform3D(-0.519848, 0, 0.854258, 0, 1, 0, -0.854258, 0, -0.519848, 0.264634, 0.632839, -0.199975)

[node name="sm_lowpoly_skull2" parent="sk_shield_enemy/SkullsOrbiting" index="4"]
transform = Transform3D(0.970699, 0, -0.240296, 0, 1, 0, 0.240296, 0, 0.9707, -0.222641, 0.816996, 0.204424)

[node name="sm_lowpoly_skull3" parent="sk_shield_enemy/SkullsOrbiting" index="5"]
transform = Transform3D(0.887478, 0, 0.46085, 0, 1, 0, -0.46085, 0, 0.887478, 0.262671, 0.816996, 0.186588)

[node name="ShieldEnemyController" type="Node" parent="." index="5"]
script = ExtResource("3_h78be")

[node name="Gravity" type="Node" parent="ShieldEnemyController" index="0"]
script = ExtResource("4_21lja")
gravity_multiplier = 2.0

[node name="RotateTowardsMotion" type="Node" parent="ShieldEnemyController" index="1"]
script = ExtResource("5_bkrha")

[node name="RotateTowardsTarget" type="Node" parent="ShieldEnemyController" index="2"]
script = ExtResource("6_8vusw")

[node name="ChargeTimeout" type="Timer" parent="ShieldEnemyController" index="3"]
wait_time = 2.5

[node name="HitBoxComponent3D" type="Area3D" parent="." index="6" node_paths=PackedStringArray("sender")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.653551, -0.741859)
collision_mask = 257
script = ExtResource("3_8ipek")
sender = NodePath("..")
amount = 20.0
active = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBoxComponent3D" index="0"]
shape = SubResource("BoxShape3D_43og7")

[node name="DetectionArea" type="Area3D" parent="." index="7"]
collision_mask = 259

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea" index="0"]
shape = SubResource("SphereShape3D_5rvqd")

[node name="StopChargingCast" type="RayCast3D" parent="." index="8"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0.666382, -0.521114)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBoxComponent3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.591886, 0)
shape = SubResource("SphereShape3D_riddk")

[node name="enemy_sfx" parent="." index="10"]
hurts = SubResource("AudioStreamRandomizer_ftmsj")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="12"]
unique_name_in_owner = true

[editable path="sk_shield_enemy"]
